# bitly-backend

./: README.md  docker-mariadb.yml  pyproject.toml
bitly_backend/: alembic.ini  test.db
bitly_backend/alembic/versions/: 2023_03_11_2237-07638cc019da_create_users_table.py  2023_03_12_0238-ea90ed65cdf8_create_urls_and_keys_table.py
bitly_backend/app/: app.py  crud.py  database.py  models.py  schemas.py
