[tool.poetry]
name = "bitly-backend"
version = "0.1.0"
description = ""
authors = ["Niwaiwa <po2846@gmail.com>"]
readme = "README.md"
packages = [{include = "bitly_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.93.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sqlalchemy = "^2.0.5.post1"
alembic = "^1.10.2"
mysqlclient = "^2.1.1"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
